<resources>
    <string name="app_name">Number Conposition</string>
    <string name="number_composition_text_title">Состав числа</string>
    <string name="logo_brain">Logo brain</string>
    <string name="submit">Понятно</string>
    <string name="game_rules">
        Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут
        числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре,
        для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном
        из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно
        быть число 3, потому что 3 + 4 = 7
    </string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test_level">Тестовый уровень</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Сложный</string>
    <string name="default_time_value">00:00</string>
    <string name="count_of_right_answer">Правильных ответов %s (минимум %s)</string>
    <string name="required_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="your_score">Ваш счет: %s</string>
    <string name="require_percent_of_right_answers">Необходимый процент правильных ответов: %s</string>
    <string name="percent_right_answers">Процент правильных ответов: %s</string>
    <string name="try_again">Попробовать снова</string>
    <string name="smile_emoji">smile_emoji</string>
</resources>