<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/levelTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/choose_level"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/testLevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="4sp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/test_level"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/easyLevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="4sp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/easy_level"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/normalLevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="4sp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/normal_level"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/hardLevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="4sp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/hard_level"
        android:textColor="@color/white" />

</LinearLayout>